destination qism yasaldi

--- a/styles/style.css
+++ b/styles/style.css
@@ -288,5 +288,54 @@ body {
   font-style: normal;
   font-weight: 400;
   line-height: 160%; /* 28.8px */
-  
+}
+
+/* Destination styles */
+.destination__top {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 64px;
+}
+
+.destination__top__text h4 {
+  color: var(--Secondary, #f85e9f);
+  font-size: 23px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%; /* 27.6px */
+  letter-spacing: 4.6px;
+  text-transform: uppercase;
+}
+
+.destination__top__text h2 {
+  color: var(--grey-scale-black, #191825);
+  font-size: 44px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%; /* 52.8px */
+}
+
+.destination__main__card{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 64px;
+}
+
+.destination__card__text {
+  display: flex;
+  padding: 32px;
+  width: 373px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 32px;
+  align-self: stretch;
+  border-radius: 0px 0px 32px 32px;
+  background: #fff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.05),
+    0px 32px 71px 0px rgba(0, 0, 0, 0.05),
+    0px 128px 128px 0px rgba(0, 0, 0, 0.04),
+    0px 288px 173px 0px rgba(0, 0, 0, 0.03),
+    0px 513px 205px 0px rgba(0, 0, 0, 0.01),
+    0px 801px 224px 0px rgba(0, 0, 0, 0);
 }
