--- a/styles/style.css
+++ b/styles/style.css
@@ -84,6 +84,51 @@ body {
   border: 1px solid #222831;
 }
 
+.solid {
+  display: none;
+}
+
+@media screen and (max-width: 1024px) {
+  .container {
+    max-width: 896px;
+    width: 100%;
+  }
+
+  .solid {
+    display: block;
+    margin-right: auto;
+  }
+  .nav {
+    display: none;
+  }
+  .logo {
+    margin-right: 243px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    width: 398px;
+  }
+  .solid {
+    display: block;
+    margin-left: 210px;
+  }
+  .header__container {
+    flex-direction: row-reverse;
+    display: flex;
+  }
+  .nav {
+    display: none;
+  }
+  .logo {
+    margin-right: auto;
+  }
+  .sign {
+    display: none;
+  }
+}
+
 /* Hero styles */
 .hero__container {
   background-image: url(../img/girl__card.png);
@@ -228,6 +273,7 @@ body {
   justify-content: space-between;
   list-style: none;
 }
+
 /* Services style */
 .services__container {
   display: flex;
@@ -315,7 +361,12 @@ body {
   line-height: 120%; /* 52.8px */
 }
 
-.destination__main__card{
+.destination__top__img img {
+  width: 232px;
+  height: 150px;
+}
+
+.destination__main__card {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -328,7 +379,7 @@ body {
   width: 373px;
   flex-direction: column;
   align-items: flex-start;
-  gap: 32px;
+
   align-self: stretch;
   border-radius: 0px 0px 32px 32px;
   background: #fff;
@@ -338,4 +389,41 @@ body {
     0px 288px 173px 0px rgba(0, 0, 0, 0.03),
     0px 513px 205px 0px rgba(0, 0, 0, 0.01),
     0px 801px 224px 0px rgba(0, 0, 0, 0);
+}
+
+.destination__card__name {
+  display: flex;
+  justify-content: space-between;
+}
+
+.destination__card__name h3 {
+  color: var(--grey-scale-black, #191825);
+
+  font-size: 23px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%; /* 27.6px */
+  margin-bottom: 16px;
+}
+
+.destination__card__name h2 {
+  color: var(--Secondary, #f85e9f);
+
+  font-size: 23px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%; /* 27.6px */
+}
+
+div.star {
+  color: var(--Orange, #ff5722);
+
+  font-size: 23px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%; /* 27.6px */
+  gap: 8px;
+  display: flex;
+  align-items: center;
+  margin-top: 32px;
 }
