--- a/styles/style.css
+++ b/styles/style.css
@@ -411,7 +411,7 @@ body {
   line-height: 120%; /* 52.8px */
   width: 444px;
 }
-.services__card__main{
+.services__card__main {
   display: flex;
   gap: 21px;
 }
@@ -459,30 +459,29 @@ body {
   .services__container {
     flex-direction: column;
   }
-  .services__text{
+  .services__text {
     width: 896px;
     text-align: center;
   }
-  .services__text h3{
+  .services__text h3 {
     width: 896px;
     margin-bottom: 64px;
   }
-  .services__card__main{
+  .services__card__main {
     display: flex;
     align-items: center;
     gap: 20px;
-
   }
 
-.services__card h4{
-width: 160px;
-}
+  .services__card h4 {
+    width: 160px;
+  }
 
-  .services__card p{
-width: 160px;
-align-items: center;
-display: inline-block;
-margin-right: -250px;
+  .services__card p {
+    width: 160px;
+    align-items: center;
+    display: inline-block;
+    margin-right: -250px;
   }
 }
 
@@ -494,22 +493,22 @@ margin-right: -250px;
   .services__text h3 {
     font-size: 32px;
     font-weight: 700;
-line-height: 120%;
+    line-height: 120%;
     width: 398px;
     margin-left: 250px;
   }
-  .services__card__main{
+  .services__card__main {
     flex-direction: column;
   }
-  .services__card{
+  .services__card {
     width: 398px;
     padding: 64px;
   }
-  .services__card h4{
+  .services__card h4 {
     width: 334px;
     margin-bottom: -32px;
   }
-  .services__card p{
+  .services__card p {
     width: 330px;
   }
 }
@@ -606,7 +605,6 @@ div.star {
   margin-top: 32px;
 }
 
-
 @media screen and (max-width: 1024px) {
   .container {
     width: 896px;
@@ -620,10 +618,26 @@ div.star {
     margin-bottom: 64px;
     margin-top: 16px;
   }
-  .destination__card{
+  .destination__card .thumb {
     width: 278px;
-    
   }
+  .destination__card__text {
+    width: 278px;
+  }
+  .destination__card__name{
+flex-direction: column-reverse;
+  }
+
+  .destination__card__name h2, h3{
+    font-size: 23px;
+    font-weight: 700;
+    margin: 8px 0px;
+  }
+.destination__card__text p{
+  width: 214px;
+  margin-left: -1px;
+  text-align: start;
+}
 }
 
 @media screen and (max-width: 430px) {
@@ -634,27 +648,25 @@ div.star {
   .services__text h3 {
     font-size: 32px;
     font-weight: 700;
-line-height: 120%;
+    line-height: 120%;
     width: 398px;
     margin-left: 250px;
   }
-  .services__card__main{
+  .services__card__main {
     flex-direction: column;
   }
-  .services__card{
+  .services__card {
     width: 398px;
     padding: 64px;
   }
-  .services__card h4{
+  .services__card h4 {
     width: 334px;
     margin-bottom: -32px;
   }
-  .services__card p{
+  .services__card p {
     width: 330px;
   }
 }
-
-
 
 /* Travel style */
 
@@ -719,7 +731,7 @@ line-height: 120%;
   gap: 16px;
   flex: 1 0 0;
   border-radius: 32px;
-  border:grey-scale-black-10, rgba(25, 24, 37, 0.1));
+  border: (grey-scale-black-10, rgba(25, 24, 37, 0.1));
   background: var(--white, #fff);
 
   width: 204.5px;
