--- a/styles/style.css
+++ b/styles/style.css
@@ -1010,3 +1010,72 @@ div.star {
 
   margin: 56px 0px;
 }
+
+.subscribe__container {
+  background: rgba(250, 205, 73, 0.08);
+  padding: 128px 64px;
+}
+
+.subscribe__container h4 {
+  color: var(--Secondary, #f85e9f);
+  text-align: center;
+  font-size: 23px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%; /* 27.6px */
+  letter-spacing: 4.6px;
+  text-transform: uppercase;
+  margin-bottom: 32px;
+}
+
+.subscribe__container h2 {
+  color: var(--grey-scale-black, #191825);
+  text-align: center;
+
+  font-size: 55px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%; /* 66px */
+}
+
+form {
+  margin-top: 64px;
+  display: flex;
+  justify-content: space-between;
+}
+input {
+  /* background-image: url(../img/message.svg);
+  background-repeat: no-repeat; */
+  display: flex;
+  border-radius: 32px;
+  background: var(--white, #ffffff);
+  padding: 32px;
+  align-items: center;
+
+  align-self: stretch;
+  width: 757px;
+  border: none;
+}
+form button {
+  display: flex;
+  padding: 32px 64px;
+
+  align-items: center;
+
+  gap: 16px;
+
+  border-radius: 32px;
+  background: var(--Primary, #5d50c6);
+  border: 1px solid #5d50c6;
+  transition: all 0.5s;
+
+  color: var(--white, #fff);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%; /* 27.6px */
+}
+form button:hover {
+  background-color: transparent;
+  color: black;
+}
